# comfyui-lorainfo-sidebar

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
web/: lorainfo_sidebar.js  lorainfo_sidebar_error.js
web/css/: lorainfo-sidebar.css
