[project]
name = "lorainfo-sidebar"
description = "Preview images of LoRA files and edit their associated JSON files."
version = "1.2.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/somesomebody/lorainfo-sidebar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "somesomebody"
DisplayName = "lorainfo-sidebar"
Icon = ""
